# zipsa

./: .clawhubignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  benchmark_results.json  benchmark_v2_results.json  docker-compose.cloud.yml  docker-compose.yml  docker-entrypoint.sh  llms.txt  main.py  pyproject.toml  requirements.txt  run_benchmark.py  run_benchmark_v2.py  setup.py
.github/workflows/: ci.yml
data/: sessions.db
docs/: onboarding.md  show-hn-draft.md
eval/: .env.example  agents.py  cache.py  compare_privasis_vs_zipsa.py  harness.py  metrics.py  verify_optimizations.py
paper/: arxiv_draft.md
source/adapters/: openai_compat.py
source/auth/: __init__.py  oauth_flows.py  router.py  token_store.py
source/monitor/: dashboard.py
source/relay/: config.py  logging.py  ollama.py  orchestrator.py  planner.py  router.py  safety.py  session.py
source/relay/providers/: __init__.py  base.py  claude_provider.py  gemini_provider.py  local_provider.py  openai_provider.py
source/ui/: chat.html
tests/: test_router.py  test_safety.py
